force-app/main/default/objects/Vehicle__c/fields/OTD__c.field-meta.xml
<CustomField>
    <fullName>OTD__c</fullName>
    <formula>Delivery_Date__c - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order to Delivery (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>