force-app/main/default/objects/Vehicle__c/fields/OTD_Prediction__c.field-meta.xml
<CustomField>
    <fullName>OTD_Prediction__c</fullName>
    <label>Order to Delivery (Prediction)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>