force-app/main/default/objects/Vehicle__c/fields/Predicted_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Predicted_Delivery_Date__c</fullName>
    <formula>DATEVALUE(CreatedDate) + OTD_Prediction__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Predicted Delivery Date</label>
    <type>Date</type>
</CustomField>